Tue Feb 23 15:21:14 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb, casefold.h: Reading casing data from
	  SpecialCasing.txt.
	  (with Kimihito Matsui)

Mon Feb 22 18:33:55 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb, casefold.h: Adding flag for title-case,
	  not yet operational.
	  (with Kimihito Matsui)

Mon Feb 22 18:17:03 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb, casefold.h: Fixed bug that avoided inclusion
	  of compatibility characters in upper-/lower-case mappings.
	  (with Kimihito Matsui)

Sun Feb 21 13:57:18 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cgi/escape/escape.c: Optimize CGI.unescape performance by C ext
	  for ASCII-compatible encodings.  [Fix GH-1250]

Sun Feb 21 13:56:57 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cgi/escape/escape.c: Optimize CGI.unescapeHTML performance by C
	  ext for ASCII-compatible encodings.  [Fix GH-1242]

Sat Feb 20 15:38:16 2016  Eric Wong  <e@80x24.org>

	* doc/extension.rdoc: update paths for defs/ directory

Sat Feb 20 14:44:15 2016  Lucas Buchala  <lucasbuchala@gmail.com>

	* vm_eval.c (rb_mod_module_eval): [DOC] Fix documentation
	  signature for Module#module_eval.  [Fix GH-1258]

Sat Feb 20 14:40:44 2016  Adam O'Connor  <northband@gmail.com>

	* README.md: a few grammatical changes to the main Ruby README.md.
	  [Fix GH-1259]

Sat Feb 20 13:04:22 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (push_pattern, push_glob): deal with read paths as UTF-8
	  to stat later, on Windows as well as OS X.
	  [ruby-core:73868] [Bug #12081]

Sat Feb 20 01:53:33 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_mod_const_get): make error message at uninterned
	  string consistent with symbols.  [ruby-dev:49498] [Bug #12089]

Fri Feb 19 23:37:52 2016  Masahiro Tomita  <tommy@tmtm.org>

	* lib/find.rb (Find#find): raise with the given path name if it